does seo related works sitemap, meta tags

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/logo.png" /> -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_info/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_info/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_info/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_info/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon_info/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon_info/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon_info/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon_info/site.webmanifest" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,11 +29,39 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <meta name="google-site-verification" content="UIGENv9vCo2fRvQlvfoTjtoq2kF8ewxQR71rhuYRClA">
+    <meta
+      name="google-site-verification"
+      content="UIGENv9vCo2fRvQlvfoTjtoq2kF8ewxQR71rhuYRClA"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Helper Store</title>
+    <!-- <title>App Helper Store</title> -->
+    <!-- General Meta Tags -->
+    <title>Real Projects and Coding Resources by Somnath Gupta - App Helper Store</title>
+    <meta
+      name="description"
+      content="App Helper Store by Somnath Gupta offers real-world coding projects, tutorials, and resources to help you learn and improve your development skills."
+    />
+    <meta
+      name="keywords"
+      content="App Helper Store, Somnath Gupta, coding projects, JavaScript, React, Node.js, web development, tutorials, programming courses, developer portfolio"
+    />
+    <meta name="author" content="Somnath Gupta" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Real Projects and Coding Resources by Somnath Gupta - App Helper Store"
+    />
+    <meta
+      property="og:description"
+      content="Explore a wide range of coding projects and tutorials created by Somnath Gupta. Learn and improve your development skills with practical examples and courses."
+    />
+    <meta property="og:url" content="https://www.apphelper.store/" />
+    <meta
+      property="og:image"
+      content="https://lh3.googleusercontent.com/d/1GekyEMl_Gce3o6n0_YiDUPEcB4J2ezyz"
+    />
   </head>
-  <body class="font-poopins font-normal ">
+  <body class="font-poopins font-normal">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
